# nu_plugin_dcm

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: convert.rs  dcm.rs  dicomweb.rs  lib.rs  main.rs  meta.rs  plugin.rs  reader.rs
tests/: dcm_parser_insta.rs  dicomweb.rs  integration_tests.rs  simple.rs  test_utils.rs
tests/assets/: ExplicitVRBigEndian-NoPreamble.dcm  ExplicitVRBigEndian-Preamble.dcm  ExplicitVRLittleEndian-NoPreamble.dcm  ExplicitVRLittleEndian-Preamble.dcm  ImplicitVRLittleEndian-NoPreamble.dcm  ImplicitVRLittleEndian-Preamble.dcm  dicomweb-example.json  dicomweb-list-example.json  generate-files.py
