[package]
name = "nu_plugin_dcm"
version = "0.3.2"
license = "MIT"
description = "A nushell plugin to parse Dicom files and DICOMweb records"
homepage = "https://github.com/realcundo/nu_plugin_dcm"
repository = "https://github.com/realcundo/nu_plugin_dcm"
readme = "README.md"
keywords = ["nu", "nushell", "dicom"]
include = ["src/**/*", "LICENSE", "README.md"]

# same as nushell
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.8"                                           # ideally should match dicom
dicom = { version = "0.8.1", default-features = false }
indexmap = "2.9"                                        # to match the version from nu
itertools = "0.14"

nu-plugin = "0.105.1"
nu-protocol = { version = "0.105.1", features = ["plugin"] }

[dev-dependencies]
nu-plugin-test-support = "0.105.1"
nu-command = "0.105.1"
test-case = "3"

[profile.release]
lto = true
opt-level = 2
codegen-units = 1
