[package]
name = "nu_plugin_dcm"
version = "0.5.0"
license = "MIT"
description = "A nushell plugin to parse Dicom files and DICOMweb records"
homepage = "https://github.com/realcundo/nu_plugin_dcm"
repository = "https://github.com/realcundo/nu_plugin_dcm"
readme = "README.md"
keywords = ["nu", "nushell", "dicom"]
include = ["src/**/*", "LICENSE", "README.md"]

# same as nushell
edition = "2024"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.8"                                           # ideally should match dicom
dicom = { version = "0.8.2", default-features = false }
indexmap = "2.11"                                       # to match the version from nu
itertools = "0.14"

nu-plugin = "0.107.0"
nu-protocol = { version = "0.107.0", features = ["plugin"] }

[dev-dependencies]
nu-plugin-test-support = "0.107.0"
nu-command = "0.107.0"
test-case = "3"
insta = { version = "1.43", default-features = false, features = ["glob", "redactions", "filters", "ron"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = true
opt-level = 2
codegen-units = 1
